--- a/deploy.yml
+++ b/deploy.yml
@@ -6,8 +6,8 @@ stages:
   - stage: deploy
     jobs:
       - ${{ each deployment in parameters.json }}:
-          - deployment: deploy-${{ deployment.name }}
-            displayName: Deploy
+          - deployment: deploy_${{ deployment.name }}
+            displayName: Deploy ${{ upper(deployment.name) }}
             environment: data
             workspace:
               clean: all
