--- a/deploy.yml
+++ b/deploy.yml
@@ -37,6 +37,7 @@ stages:
                         echo "path ${{ deployment.path }}"
                         echo "serviceName $(serviceName)"
                         echo "resourceType ${{ parameters.resourceType }}
+                      displayName: Display parameters
                     - task: AzureCLI@2
                       displayName: create resource ${{ parameters.resourceType }}
                       inputs:
