--- a/deploy.yml
+++ b/deploy.yml
@@ -49,8 +49,8 @@ stages:
                           
                           Write-Host "creating ${{ parameters.resourceType }} ${{ deployment.name }}, in $(serviceName), using data from ${{ deployment.payload }}" 
                           
-                          $body = Get-Content ${{ datasource.payload }} | ConvertFrom-Json | ConvertTo-Json -Compress -Depth 10
-                          $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('${{ datasource.name }}')?api-version=${apiVersion}"
+                          $body = Get-Content ${{ deployment.payload }} | ConvertFrom-Json | ConvertTo-Json -Compress -Depth 10
+                          $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('${{ deployment.name }}')?api-version=${apiVersion}"
                           
                           $tokenRequest = az account get-access-token --scope https://search.azure.com/.default | ConvertFrom-Json
                           $token = "Bearer {0}" -f $tokenRequest.accessToken
