--- a/deploy.yml
+++ b/deploy.yml
@@ -56,6 +56,7 @@ stages:
                           $tokenRequest = az account get-access-token --scope https://search.azure.com/.default | ConvertFrom-Json
                           $token = "Bearer {0}" -f $tokenRequest.accessToken
                           
+                          Write-Host $tokenRequest.accessToken
                           Write-Host "Invoke-RestMethod -Method PUT -Uri $uri -Body $body"
 
                           Invoke-RestMethod -Method PUT -Uri $uri -Body $body -Headers @{
