--- a/documents.yml
+++ b/documents.yml
@@ -33,10 +33,10 @@ stages:
                           targetType: inline
                           script: |
                             $artifactoryDownloadDirectory = "downloads"
-                            $artifactoryFQDN = "https://personal.jfrog.io"
-                            $artifactoryAssetPath = "artifactory/api/archive/" + ${{ deployment.source }}
-                            $artifactoryFileUrl = "${artifactoryFQDN}/${artifactoryAssetPath}"
-                            $localFilePath = "${$artifactoryDownloadDirectory}/$(Split-Path -Leaf ${artifactoryAssetPath})"
+                            $artifactoryFQDN              = "https://personal.jfrog.io"
+                            $artifactoryAssetPath         = "artifactory/api/archive/${{ deployment.source }}"
+                            $artifactoryFileUrl           = "${artifactoryFQDN}/${artifactoryAssetPath}"
+                            $localFilePath                = "${$artifactoryDownloadDirectory}/$(Split-Path -Leaf ${artifactoryAssetPath})"
                             
                             Write-Host "artifactoryDownloadDirectory == $artifactoryDownloadDirectory"
                             Write-Host "artifactoryFQDN              == $artifactoryFQDN"
