--- a/documents.yml
+++ b/documents.yml
@@ -67,15 +67,17 @@ stages:
                       scriptType: InlineScript
                       pwsh: true
                       Inline: |
-                        $context = New-AzStorageContext -StorageAccountName leifdocsource
+                        $context = New-AzStorageContext -StorageAccountName "leifdocsource"
 
                         $artifactoryExpandedDirectory = "${{ deployment.container }}"
                         $artifactoryAssetPath         = "${{ deployment.source }}"
                         $baseFile                     = Split-Path -Leaf ${artifactoryAssetPath}
-                        $localFilePath                = "${artifactoryExpandedDirectory}/${baseFile}"
+
+#                        $localFilePath                = "${artifactoryExpandedDirectory}/${baseFile}"
+                        $localFilePath                = "${artifactoryExpandedDirectory}/modules/context/globals/outputs.tf"
                         
                         Write-Host "artifactoryDownloadDirectory == $artifactoryDownloadDirectory"
                         Write-Host "artifactoryAssetPath         == $artifactoryAssetPath"
                         Write-Host "localFilePath                == $localFilePath"
                         
-                        Set=AzStorageBlobContent -File $localFilePath -Container ${{ deployment.container }} -Blob leifdocsource -Conte                         
+                        Set-AzStorageBlobContent -File $localFilePath -Container ${{ deployment.container }} -Blob leifdocsource -Context $context
