test reading jason

--- a/deploy.yml
+++ b/deploy.yml
@@ -46,7 +46,12 @@ stages:
                       $apiVersion = "2024-07-01"
                       
                       Write-Host "creating ${{ parameters.resourceType }}, in $(serviceName), using data from ${{ parameters.jsonPath }}" 
+
+                      $json = Get-Content ${{ parameters.jsonPath }}/data.json | ConvertFrom-Json
                       
+                      foreach ($resource in $json) {
+                        Write-Host "Processing $resource.name"
+
 #                      $body = Get-Content ${{ deployment.payload }} | ConvertFrom-Json | ConvertTo-Json -Compress -Depth 10
 #                      $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('${{ deployment.name }}')?api-version=${apiVersion}"
 #
@@ -59,4 +64,4 @@ stages:
 #                      Invoke-RestMethod -Method PUT -Uri $uri -Body $body -Headers @{
 #                        "Authorization" = $token
 #                        "Content-Type"  = "application/json"
-#                      }
+                      }
