test reading jason

--- a/deploy.yml
+++ b/deploy.yml
@@ -47,6 +47,8 @@ stages:
                       
                       Write-Host "creating ${{ parameters.resourceType }}, in $(serviceName), using data from ${{ parameters.jsonPath }}" 
 
+                      gci
+                      
                       $json = Get-Content ${{ parameters.jsonPath }}/data.json | ConvertFrom-Json
                       
                       foreach ($resource in $json) {
