--- a/deploy.yml
+++ b/deploy.yml
@@ -55,7 +55,7 @@ stages:
                       
                         $body = $resource.payload | ConvertTo-Json -Compress -Depth 10
                         
-                        $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('${resourceName}')?api-version=${apiVersion}"
+                        $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('${$resource.name}')?api-version=${apiVersion}"
   
                         $tokenRequest = az account get-access-token --scope https://search.azure.com/.default | ConvertFrom-Json
                         $token = "Bearer {0}" -f $tokenRequest.accessToken
