--- a/deploy.yml
+++ b/deploy.yml
@@ -45,17 +45,19 @@ stages:
                     inlineScript: |
                       $apiVersion = "2024-07-01"
                       
-                      Write-Host "creating ${{ parameters.resourceType }}, in $(serviceName), using data from ${{ parameters.jsonPath }}" 
+                      Write-Host "creating ${{ parameters.resourceType }}, in $(serviceName), using data files from ${{ parameters.jsonPath }}" 
                       
-                      $json = Get-Content ${{ parameters.jsonPath }}/${{ parameters.environment }}/data.json | ConvertFrom-Json
+                      $jsonFiles = Get-ChildItem "${{ parameters.jsonPath }}/${{ parameters.environment }}" -Filter *.json
                       
-                      foreach ($resource in $json) {
-                        Write-Host "Processing $($resource.name)"
-                        $resourceName = $resource.name
+                      foreach ($jsonFile in $jsonFiles) {
+                        Write-Host "Processing $jsonFile
                       
-                        $body = $resource.payload | ConvertTo-Json -Compress -Depth 10
-                        
-                        $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('{0}')?api-version=${apiVersion}" -f $resource.name
+                        $json = Get-Content $jsonFile | ConvertFrom-Json
+                        $body = $json | ConvertTo-Json -Compress -Depth 10
+                      
+                        Write-Host "Processing $($json.name)"
+                          
+                        $uri = "https://$(serviceName).search.windows.net/${{ parameters.resourceType }}('{0}')?api-version=${apiVersion}" -f $json.name
   
                         $tokenRequest = az account get-access-token --scope https://search.azure.com/.default | ConvertFrom-Json
                         $token = "Bearer {0}" -f $tokenRequest.accessToken
